<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Profile.Edit.InputContainer"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Profile.Edit.TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_birthday" />

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/tilBirthday"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthday"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/profile_birthday" />
            </com.example.ui.views.CustomTextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/scBirthday"
                style="@style/Profile.Edit.Switch"
                android:layout_marginTop="16dp"
                android:text="@string/profile_show_in_profile" />
        </LinearLayout>

        <LinearLayout style="@style/Profile.Edit.InputContainer">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Profile.Edit.TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender" />

            <com.example.ui.views.CustomTextInputLayout
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconDrawable="@drawable/ic_drop_down"
                app:endIconMode="dropdown_menu">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/tvGender"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/profile_gender"
                    android:paddingStart="@dimen/background_input_padding"
                    android:paddingEnd="@dimen/background_input_padding" />
            </com.example.ui.views.CustomTextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/scGender"
                style="@style/Profile.Edit.Switch"
                android:layout_marginTop="16dp"
                android:text="@string/profile_show_in_profile" />
        </LinearLayout>

        <LinearLayout style="@style/Profile.Edit.InputContainer">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Profile.Edit.TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_city" />

            <com.example.ui.views.CustomTextInputLayout
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="none">

                <com.example.ui.views.suggestFieldView.address.DaDataAutoCompleteTextView
                    android:id="@+id/etCity"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/profile_city"
                    android:inputType="textCapSentences"
                    android:minHeight="48dp"
                    android:paddingStart="@dimen/background_input_padding"
                    android:paddingEnd="@dimen/background_input_padding" />
            </com.example.ui.views.CustomTextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/scCity"
                style="@style/Profile.Edit.Switch"
                android:layout_marginTop="16dp"
                android:text="@string/profile_show_in_profile" />
        </LinearLayout>

        <LinearLayout
            style="@style/Profile.Edit.InputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnAddInfo"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:srcCompat="@drawable/ic_information"
                    app:tint="@color/chat_list_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Profile.Edit.TextViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/profile_additional_data" />

            </LinearLayout>

            <com.example.ui.views.CustomTextInputLayout
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:errorEnabled="false"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNotes"
                    style="@style/Profile.Edit.Input"
                    android:gravity="start|top"
                    android:hint="@string/profile_notes"
                    android:inputType="textMultiLine|textCapSentences"
                    android:lines="5"
                    tools:text="@tools:sample/lorem/random" />
            </com.example.ui.views.CustomTextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/scNotes"
                style="@style/Profile.Edit.Switch"
                android:layout_marginTop="16dp"
                android:text="@string/profile_show_in_profile" />
        </LinearLayout>
    </LinearLayout>
</layout>
