...
    <com.example.ui.views.passwordView.CustomPasswordView
        android:id="@+id/passwordView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/btn_reset"
        app:layout_constraintTop_toBottomOf="@id/tvResetTitle"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <com.example.ui.views.loading.CustomLoadingButton
        android:id="@+id/btn_reset"
        style="@style/BtnLoadingStyle"
...
