...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnForgotPassword"
        style="@style/ClickableTextView"
        fontPath="fonts/sf_pro_display.OTF"
        android:layout_marginTop="20dp"
        android:text="@string/auth_forgot_password"
        app:layout_constraintBottom_toTopOf="@id/btn_change"
        app:layout_constraintEnd_toEndOf="parent"
...
